--- a/_config.yml
+++ b/_config.yml
@@ -12,9 +12,9 @@ title                    : "徐安察的个人主页"
 title_separator          : "-"
 name                     : &name "徐安察"
 description              : &description "personal description"
-url                      : https://liangliangzhuang.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://xu-ancha.github.io/ # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "academicpages/academicpages.github.io"
+repository               : "XU-ANCHA/XU-ANCHA.github.io"
 
 # Site Author - The following control what appear as part of the author content on the side bar.
 #               If a field is blank the icon and link will not appear, otherwise it will be shown.
@@ -41,7 +41,7 @@ author:
   bitbucket        : # Username - Update with your username on the site
   codepen          : # Username
   dribbble         : # Username
-  github           : "academicpages"
+  github           : "XU-ANCHA"
   kaggle           : # Username  
   stackoverflow    : # User number or user number and name (i.e., use "1" or "1/jeff-atwood")    
 
